--- a/style.css
+++ b/style.css
@@ -10,21 +10,27 @@ body {
       color: #ff4444;
       padding: 10px 0;
       text-align: center;
+      justify-content: center;
   }
   nav {
+      display: flex;
       background-color: #282828;
       overflow: hidden;
+      justify-content: space-evenly;
   }
   nav a {
-      float: left;
-      display: block;
+      display: flex;
+      flex-direction: row;
       color: #ffffff;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
+      transition: background-color 0.3s ease;
+      border-radius: 5px;
   }
   nav a:hover {
       background-color: #3d3d3d;
+      border-radius: 10px;
   }
   main {
       padding: 20px;
@@ -37,4 +43,28 @@ body {
       position: fixed;
       width: 100%;
       bottom: 0;
+  }
+
+  p {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+  #contact {
+      margin-right: 20px;
+      
+      a {
+            color: green;
+            text-decoration: none;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+
+            &:hover {
+                  background-color: #3d3d3d;
+                  color: #ffffff;
+                  border-radius: 10px;
+            }
+      }
   }
